# AuraWay-TTS

./: main.py  pyproject.toml  requirement.txt
.github/workflows/: build.yml
