[project]
name = "auraway-tts"
version = "1.0.0"
description = "Text To Speech mobile application built with AuraWay"
dependencies = [
    "flet==0.85.1",
    "pyjnius"
]

[tool.flet]
org = "com.auraway"
product = "AuraWay TTS"

[tool.flet.app]
path = "."          
module = "main"     

[tool.flet.icons]
android = "icon.png"

[tool.flet.splash]
color = "#1A1C1E"
dark_color = "#1A1C1E"
hide_animation = true
